Fix alignment

--- a/style.css
+++ b/style.css
@@ -238,8 +238,6 @@ a:hover {
   align-items: baseline;
 }
 
-/************************/
-
 .specie-image-container {
   width: 100%;
   height: 400px;
@@ -928,6 +926,10 @@ li {
 
   .hero-banner-sub-text-container {
     text-align: left;
+  }
+
+  .hero-banner-species {
+    background-position: left;
   }
 
   h1 {
